--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,9 @@
             ],
             "styles": [
               "src/styles.css",
+              {
+                "input":"node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
