--- a/src/proxy.config.json
+++ b/src/proxy.config.json
@@ -1,6 +1,6 @@
 {
     "/api/*": {
-        "target": "http://localhost:7067/",
+        "target": "https://localhost:7067/",
         "secure": false
     }
 }
